--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxt/image-edge": "^1.0.0-27809804.194d2d6",
     "@nuxtjs/fontaine": "^0.2.2",
     "@nuxtjs/google-fonts": "^3.0.0-1",
+    "@nuxtjs/supabase": "^0.3.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/forms": "^0.5.3",
     "@vueuse/nuxt": "^9.6.0",
