--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@antfu/eslint-config": "^0.31.0",
     "@kevinmarrec/nuxt-pwa": "^0.13.0",
     "@nuxt/image-edge": "^1.0.0-27809804.194d2d6",
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/fontaine": "^0.2.2",
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/supabase": "^0.3.0",
